# test-scalapack

./: .gitignore  README.md  cblacs.h  cpblas.h  hello.c  layout.c  main.c  meson.build  meson_options.txt  multigrid.c  pdgemm.c  pdsyev.c
